made a number of small ui tweaks success.html auto navigates back to home after two seconds removed charts button image and tables now collapsed by default all sections have correct collapse setting so you don't have to press button twice to toggle initially cursor starts in email field on login page

--- a/src/main/webapp/resources/css/dashboard.css
+++ b/src/main/webapp/resources/css/dashboard.css
@@ -100,6 +100,12 @@ body {
   border-radius: 50%;
 }
 
+.thumb {
+    width: 23%;
+    height: auto;
+    margin: 1%;
+}
+
 #sensorMap { height: 400px; }
 
 /*
